--- a/index.html
+++ b/index.html
@@ -98,18 +98,18 @@ LinkedIn</button></a>
   <div class="row" >
     
     <div class="col-sm-3">
-      <a href="https://codepen.io/SmokeyVale/full/qZxGmx"><p style="color:#3a0000;">My Weather App | JavaScript | Angular JS</p>
-      <img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/v/t1.0-9/12985586_570634049765778_4737648735241786150_n.jpg?oh=99a1fe3cfcfb1d4dcbcc4f6af1c7926b&oe=5786889D" class="img-responsive" style="width:100%" alt="Image"></a>
+      <a href="#"><p style="color:#3a0000;">My Weather App | JavaScript | Angular JS</p>
+      <img class="Pics" src="#" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
-      <a href="https://codepen.io/SmokeyVale/full/pywWzZ"><p style="color:#3a0000;">Random Quote Machine | JQuery</p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/hphotos-xpl1/v/t1.0-9/12923323_562873837208466_1687043321505987158_n.png?oh=ae9bbddc8fb394f6b6ed5fd9c27f8f13&oe=577660EB" style="width:100%" alt="Image"></a>
+      <a href="#"><p style="color:#3a0000;">Random Quote Machine | JQuery</p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/hphotos-xpl1/v/t1.0-9/12923323_562873837208466_1687043321505987158_n.png?oh=ae9bbddc8fb394f6b6ed5fd9c27f8f13&oe=577660EB" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3">
-      <a href="https://codepen.io/SmokeyVale/full/Yqamgx"><p style="color:#3a0000;">Wiki Viewer | AJAX</p>
-      <img class="Pics" src="https://scontent-iad3-1.xx.fbcdn.net/v/l/t1.0-9/13094416_575991122563404_1801930651626449171_n.jpg?oh=d050e4641e2e7363f06664368c804b54&oe=57AD6883" style="width:100%" alt="Image"></a>
+      <a href="#"><p style="color:#3a0000;">Wiki Viewer | AJAX</p>
+      <img class="Pics" src="#" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
-      <a  href="https://codepen.io/SmokeyVale/full/JXwEJo"><p style="color:#3a0000;">Dred Journey | HTML | CSS3 | JQUERY</p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/v/t1.0-9/13173956_581572572005259_4126380397490566990_n.png?oh=19fad75fa7a82e101c3db2a9a2ac1f07&oe=57D7ECB7" style="width:100%" alt="Image"></a>
+      <a  href="#">Dred Journey | HTML | CSS3 | JQUERY</p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/v/t1.0-9/13173956_581572572005259_4126380397490566990_n.png?oh=19fad75fa7a82e101c3db2a9a2ac1f07&oe=57D7ECB7" style="width:100%" alt="Image"></a>
     </div>
   </div>
 </div><br>
@@ -117,16 +117,16 @@ LinkedIn</button></a>
 <div class="container-fluid bg-3 text-center" >    
   <div class="row">
     <div class="col-sm-3"> 
-      <a href="https://scontent-mia1-1.xx.fbcdn.net/v/t1.0-9/13335968_594062987422884_5982634128521508094_n.png?oh=1c292ed73fad7bd8cb3cb98f1275384b&oe=580D324F"><p style="color:#3a0000;">Bootstrap Sales Site | HTML | CSS3 | Javascript</p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/v/t1.0-9/13413754_593929824102867_7876005423750452170_n.png?oh=452165f6faf6747b85a36b3de8b87122&oe=57C7338B" style="width:100%" alt="Image"></a>
+      <a href="#"><p style="color:#3a0000;">Bootstrap Sales Site | HTML | CSS3 | Javascript</p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/v/t1.0-9/13413754_593929824102867_7876005423750452170_n.png?oh=452165f6faf6747b85a36b3de8b87122&oe=57C7338B" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
-      <a href="https://codepen.io/SmokeyVale/full/ONypaW"><p style="color:#3a0000;">Tribute Page | Bootstrap | HTML | CSS3 </p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/10464319_555037451325438_2404125624526556529_n.png?oh=1965711ead06e81d385987614d3221df&oe=57895F5A" style="width:120%" alt="Image"></a>
+      <a href="#><p style="color:#3a0000;">Tribute Page | Bootstrap | HTML | CSS3 </p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/10464319_555037451325438_2404125624526556529_n.png?oh=1965711ead06e81d385987614d3221df&oe=57895F5A" style="width:120%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
-      <a href="https://scontent-mia1-1.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/12801171_555039817991868_6229811718542779172_n.png?oh=512a6d2b0814cea8ce3a66965d39287c&oe=5751606A"><p style="color:#3a0000;">iOS Mobile App | Swift</p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/v/t1.0-9/12801171_555039817991868_6229811718542779172_n.png?oh=f7a82b202c07e886c4be5fca5ce56902&oe=57C8076A" style="width:39.5%" alt="Image"></a>
+      <a href="#"><p style="color:#3a0000;">iOS Mobile App | Swift</p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/v/t1.0-9/12801171_555039817991868_6229811718542779172_n.png?oh=f7a82b202c07e886c4be5fca5ce56902&oe=57C8076A" style="width:39.5%" alt="Image"></a>
     </div>
     <div class="col-sm-3">
-      <a href="https://codepen.io/SmokeyVale/full/zrOLmP"><p style="color:#3a0000;">Personal Website | HTML | CSS3</p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/1560752_554716294690887_2937870776074161116_n.jpg?oh=d3ee4bcb829a5f19bc513f2eadb35a66&oe=578A63F0" style="width:100%" alt="Image"></a>
+      <a href="#"><p style="color:#3a0000;">Personal Website | HTML | CSS3</p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/1560752_554716294690887_2937870776074161116_n.jpg?oh=d3ee4bcb829a5f19bc513f2eadb35a66&oe=578A63F0" style="width:100%" alt="Image"></a>
     </div>
   </div>
 </div><br><br>
