--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ LinkedIn</button></a>
     
     <!-- PROFILE PIC -->
 
-   <img class="img-circle pull-right PicShadow" style="border-style:solid;border-width:thin;border-color:black;width:30%;"  src="https://fbcdn-photos-c-a.akamaihd.net/hphotos-ak-xla1/v/t1.0-0/p526x296/13934653_137878576651618_5259053267289097749_n.jpg?oh=74ba085139a55c22a09cc8e026701249&oe=5859CD2C&__gda__=1482539504_9bcecec299cdedbebeaaabe6f23e08a2">
+   <img class="img-circle pull-right PicShadow" style="border-style:solid;border-width:thin;border-color:black;width:30%;"  src="me.jpg">
   
   <!-- ABOUT ME -->
   
