--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ LinkedIn</button></a>
     
     <!-- PROFILE PIC -->
 
-   <img class="img-circle pull-right PicShadow" style="border-style:solid;border-width:thin;border-color:black;width:30%;"  src="me.jpg">
+   <img class="img-circle PicShadow" style="border-style:solid;border-width:thin;border-color:black;width:30%;"  src="me.jpg">
   
   <!-- ABOUT ME -->
   
