--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ LinkedIn</button></a>
   <div class="row" >
     
     <div class="col-sm-3">
-      <a href="#"><p style="color:#3a0000;">My Weather App | JavaScript | Angular JS</p>
-      <img class="Pics" src="#" class="img-responsive" style="width:100%" alt="Image"></a>
+      <a href="https://kenneth-sweet.github.io/Smartmarks/"><p style="color:#3a0000;">SmartMarks | JavaScript/Jquery | Bootstrap</p>
+      <img class="Pics" src="smartmarks.png" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
       <a href="#"><p style="color:#3a0000;">Random Quote Machine | JQuery</p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/hphotos-xpl1/v/t1.0-9/12923323_562873837208466_1687043321505987158_n.png?oh=ae9bbddc8fb394f6b6ed5fd9c27f8f13&oe=577660EB" style="width:100%" alt="Image"></a>
