--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ LinkedIn</button></a>
   
   <!-- ABOUT ME -->
   
-  <p class="lead" style="">Pleasure to meet you! I'm Kenneth Sweet a Frontend Web Developer.<br> I enjoy building web apps and freelance translating Japanese to English while I work on my Bachelor's in Software Engineering</p>
+  <p class="lead" style="">Pleasure to meet you! I'm Kenneth Sweet, a Frontend Web Developer.<br> I enjoy building web apps and freelance translating Japanese to English while I work on my Bachelor's in Software Engineering</p>
   
                               </div>
                             </div>
@@ -102,7 +102,7 @@ LinkedIn</button></a>
       <img class="Pics" src="smartmarks.png" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
-      <a href="#"><p style="color:#3a0000;">Random Quote Machine | JQuery</p><img class="Pics" src="https://scontent-mia1-1.xx.fbcdn.net/hphotos-xpl1/v/t1.0-9/12923323_562873837208466_1687043321505987158_n.png?oh=ae9bbddc8fb394f6b6ed5fd9c27f8f13&oe=577660EB" style="width:100%" alt="Image"></a>
+      <a href="#"><p style="color:#3a0000;">Grade Calculator | C#</p><img class="Pics" src="Grades.png"></a>
     </div>
     <div class="col-sm-3">
       <a href="#"><p style="color:#3a0000;">Wiki Viewer | AJAX</p>
