--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ LinkedIn</button></a>
       <img class="Pics" src="smartmarks.png" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
-      <a href="#"><p style="color:#3a0000;">Grade Calculator | C#</p><img class="Pics" src="Grades.png"></a>
+      <a href="https://github.com/Kenneth-Sweet/Grade-Caluclator"><p style="color:#3a0000;">Grade Calculator | C#</p><img class="Pics" src="Grades.png"></a>
     </div>
     <div class="col-sm-3">
       <a href="#"><p style="color:#3a0000;">Wiki Viewer | AJAX</p>
