--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div class="jumbotron" style="background-image: url(https://image.ibb.co/mSMdYm/pacificnw.jpg);background-repeat: no-repeat;background-size:cover; color:white;">
   <div class="container text-center" style="background-color:;">
     <h1 style="margin-top:160px;style="font-weight:bold;">Kenneth Sweet</h1><br><br>      
-    <p class="text-center" style="font-weight:bold;">Frontend Web Developer</p> <br><br>
+    <p class="text-center" style="font-weight:bold;">Software Developer</p> <br><br>
       
       <!-- BUTTONS SET 1 -->
       
@@ -80,7 +80,7 @@ LinkedIn</button></a>
   
   <!-- ABOUT ME -->
   
-  <p class="lead" style="">Pleasure to meet you! I'm Kenneth Sweet, a Frontend Web Developer.<br> I enjoy building web apps and freelance translating Japanese to English while I work on my Bachelor's in Software Engineering</p>
+  <p class="lead" style="">Pleasure to meet you! I'm Kenneth Sweet, a Software Developer.<br> I enjoy building web apps and freelance translating Japanese while I work on my Bachelor's in Software Engineering</p>
   
                               </div>
                             </div>
