--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div class="jumbotron" style="background-image: url(https://image.ibb.co/mSMdYm/pacificnw.jpg);background-repeat: no-repeat;background-size:cover; color:white;">
   <div class="container text-center" style="background-color:;">
     <h1 style="margin-top:160px;style="font-weight:bold;">Kenneth Sweet</h1><br><br>      
-    <p class="text-center" style="font-weight:bold;">Software Developer</p> <br><br>
+    <p class="text-center lead" style="font-weight:bold;">Software Developer</p> <br><br>
       
       <!-- BUTTONS SET 1 -->
       
