--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ LinkedIn</button></a>
       <a href="https://github.com/Kenneth-Sweet/Grade-Caluclator"><p style="color:#3a0000;">Grade Calculator | C#</p><img class="Pics" src="Grades.png"></a>
     </div>
     <div class="col-sm-3">
-      <a href="#"><p style="color:#3a0000;">Wiki Viewer | AJAX</p>
+      <a href="linearregression.png"><p style="color:#3a0000;">LinearRegression | Python multiple libraries used</p>
       <img class="Pics" src="#" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
