--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ LinkedIn</button></a>
       <a href="https://github.com/Kenneth-Sweet/Grade-Caluclator"><p style="color:#3a0000;">Grade Calculator | C#</p><img class="Pics" src="Grades.png"></a>
     </div>
     <div class="col-sm-3">
-      <a href="https://github.com/Kenneth-Sweet/Learning-Machine-Learning-Simple-linear-regression"><p style="color:#3a0000;">LinearRegression | Python | sklearn, pandas, matplotlib</p>
-      <img class="Pics" src="linearregression.PNG" style="width:100%" alt="Image"></a>
+      <a href="https://kenneth-sweet.github.io/TokyoTime/"><p style="color:#3a0000;">LinearRegression | Python | sklearn, pandas, matplotlib</p>
+      <img class="Pics" src="tokyo.PNG" style="width:100%" alt="Image"></a>
     </div>
      <div class="col-sm-3"> 
       <a  href="https://kenneth-sweet.github.io/login-page/">Simple login page| BootStrap </p><img class="Pics" src="Capture.PNG"></a>
