--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   
   <!-- BACKGROUND IMAGE -->
 
-<div class="jumbotron" style="background-image: url(https://image.ibb.co/mSMdYm/pacificnw.jpg);background-repeat: no-repeat;background-size:cover; color:white;">
+<div class="jumbotron" style="background-image: url(pacificnw.jpg);background-repeat: no-repeat;background-size:cover; color:white;">
   <div class="container text-center" style="background-color:;">
     <h1 style="margin-top:160px;style="font-weight:bold;">Kenneth Sweet</h1><br><br>      
     <p class="text-center lead" style="font-weight:bold;">Software Developer</p> <br><br>
@@ -98,18 +98,18 @@ LinkedIn</button></a>
   <div class="row" >
     
     <div class="col-sm-3">
-      <a href="https://kenneth-sweet.github.io/Smartmarks/"><p style="color:#3a0000;">SmartMarks | JavaScript/Jquery | Bootstrap</p>
+      <a href="https://kenneth-sweet.github.io/Smartmarks/"><p style="color:#3a0000;">SmartMarks a simple bookmark manager using Jquery</p>
       <img class="Pics" src="smartmarks.png" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
-      <a href="https://github.com/Kenneth-Sweet/Grade-Caluclator"><p style="color:#3a0000;">Grade Calculator | C#</p><img class="Pics" src="Grades.png"></a>
+      <a href="https://github.com/Kenneth-Sweet/Grade-Caluclator"><p style="color:#3a0000;">Grade Calculator Reading files and doing statistics in c#</p><img class="Pics" src="Grades.png"></a>
     </div>
     <div class="col-sm-3">
-      <a href="https://kenneth-sweet.github.io/TokyoTime/"><p style="color:#3a0000;">LinearRegression | Python | sklearn, pandas, matplotlib</p>
+      <a href="https://kenneth-sweet.github.io/TokyoTime/"><p style="color:#3a0000;">Tokyo Time a fun CSS design exercise</p>
       <img class="Pics" src="tokyo.PNG" style="width:100%" alt="Image"></a>
     </div>
      <div class="col-sm-3"> 
-      <a  href="https://kenneth-sweet.github.io/login-page/">Simple login page| BootStrap </p><img class="Pics" src="Capture.PNG"></a>
+      <a  href="https://kenneth-sweet.github.io/login-page/">Simple login page with BootStrap </p><img class="Pics" src="Capture.PNG"></a>
     </div>
    
   </div>
