--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ LinkedIn</button></a>
       <img class="Pics" src="smartmarks.png" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
-      <a href="https://github.com/Kenneth-Sweet/Grade-Caluclator"><p style="color:#3a0000;">Grade Calculator Reading files and doing statistics in c#</p><img class="Pics" src="Grades.png"></a>
+      <a href="https://kenneth-sweet.github.io/Variably-Filtered-CSS/"><p style="color:#3a0000;">CSS variable fun!</p><img class="Pics" src="https://kenneth-sweet.github.io/Variably-Filtered-CSS/vapor.gif"></a>
     </div>
     <div class="col-sm-3">
       <a href="https://kenneth-sweet.github.io/TokyoTime/"><p style="color:#3a0000;">Tokyo Time a fun CSS design exercise</p>
