--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   
   <!-- BACKGROUND IMAGE -->
 
-<div class="jumbotron" style="background-image: url(pacificnw.jpg);background-repeat: no-repeat;background-size:cover; color:white;">
+<div class="jumbotron" style="background-color: #36383F">
   <div class="container text-center" style="background-color:;">
     <h1 style="margin-top:160px;style="font-weight:bold;">Kenneth Sweet</h1><br><br>      
     <p class="text-center lead" style="font-weight:bold;">Software Developer</p> <br><br>
