--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- NAV BAR -->
 
-<nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:black;>
+<nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#222;>
   <div class="container-fluid">
     <div class="navbar-header" style="background-color:;">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -56,8 +56,8 @@
   
   <!-- BACKGROUND IMAGE -->
 
-<div class="jumbotron" style="background-color: #36383F">
-  <div class="container text-center" style="background-color:;">
+<div class="jumbotron" style="background-color: #222 color: #eee" >
+  <div class="typewriter">
     <h1 style="margin-top:160px;style="font-weight:bold;">Kenneth Sweet</h1><br><br>      
     <p class="text-center lead" style="font-weight:bold;">Software Developer</p> <br><br>
       
