--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <div class="jumbotron" style="background-color: #222; color: #eee;">
   <div class="typewriter container text-center">
-    <h1 style="margin-top:160px;style="font-weight:bold;">Kenneth Sweet</h1><br><br>      
+    <h1 style="margin-top:3vh;style="font-weight:bold;">Kenneth Sweet</h1><br><br>      
     <p class="text-center lead" style="font-weight:bold;">Software Developer</p> <br><br>
       
       <!-- BUTTONS SET 1 -->
