--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   <!-- BACKGROUND IMAGE -->
 
 <div class="jumbotron" style="background-color: #222; color: #eee;">
-  <div class="typewriter container text-center">
-    <h1 style="margin-top:3vh;style="font-weight:bold;">Kenneth Sweet <br>Software Developer</h1><br><br>      
+  <div class="container text-center">
+    <h1 style="margin-top:3vh;style="font-weight:bold;">Kenneth Sweet <br><span class="typewriter">Software Developer</span></h1><br><br>      
     
       
       <!-- BUTTONS SET 1 -->
