--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
 <div class="jumbotron" style="background-color: #222; color: #eee;">
   <div class="container text-center">
-    <h1 style="margin-top:3vh;style="font-weight:bold;">Kenneth Sweet <br><span class="typewriter">Software Developer</span></h1><br><br>      
+                                    <h1 style="margin-top:3vh;style="font-weight:bold;">Kenneth Sweet </h1>
+                                  <h1 class="typewriter">Software Developer</h1><br><br>      
     
       
       <!-- BUTTONS SET 1 -->
