--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ LinkedIn</button></a>
   <div class="row" >
     
     <div class="col-sm-3">
-      <a href="https://kenneth-sweet.github.io/Smartmarks/"><p style="color:#3a0000;">SmartMarks a simple bookmark manager using Jquery</p>
-      <img class="Pics" src="smartmarks.png" class="img-responsive" style="width:100%" alt="Image"></a>
+      <a href="topofmuffin.JPG"><p style="color:#3a0000;">SmartMarks a simple bookmark manager using Jquery</p>
+      <img class="Pics" src="topofmuffin.JPG" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
       <a href="https://kenneth-sweet.github.io/Variably-Filtered-CSS/"><p style="color:#3a0000;">CSS variable fun!</p><img class="Pics" src="https://kenneth-sweet.github.io/Variably-Filtered-CSS/vapor.gif"></a>
@@ -110,7 +110,7 @@ LinkedIn</button></a>
       <img class="Pics" src="tokyo.PNG" style="width:100%" alt="Image"></a>
     </div>
      <div class="col-sm-3"> 
-      <a  href="https://kenneth-sweet.github.io/login-page/">Simple login page with BootStrap </p><img class="Pics" src="Capture.PNG"></a>
+      <a  href="instaunderground.JPG">Simple login page with BootStrap </p><img class="Pics" src="instaunderground.JPG"></a>
     </div>
    
   </div>
