--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@ LinkedIn</button></a>
 <div class="container-fluid bg-3 text-center" id="Portfolio">    
   <h3 style="line-height:90%;">Below you'll find some of my recent work</h3><br>
   <div class ="row">
+    <div style="text-align:center">
     <a href="https://kenneth-sweet.github.io/4-cleaner-oceans-Production/"><p style="color:#3a0000;">4-Cleaner-Oceans</p>
       <img class="Pics" src="cleaner.jpg" class="img-responsive" style="width:50% height:auto;" alt="Image"></a>
-    
+    </div>
   
     
     <div class="col-sm-3">
