--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ LinkedIn</button></a>
   <div class ="row">
     <div style="text-align:center">
     <a href="https://kenneth-sweet.github.io/4-cleaner-oceans-Production/"><p style="color:#3a0000;">4-Cleaner-Oceans</p>
-      <img class="Pics" src="cleaner.jpg" class="img-responsive" style="width:50% height:auto;" alt="Image"></a>
+      <img class="Pics" src="cleaner.jpg" class="img-responsive" style="width:50%; height:auto;" alt="Image"></a>
     </div>
   
     
