--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>My Bootstrap Portfolio Page</title>
   
-  
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
